# hawaii-2048

./: CMakeLists.txt  README.md
data/styles/: CMakeLists.txt
data/styles/coffee/: Palette.qml
src/: 2048.qrc  CMakeLists.txt  main.cpp
src/qml/: Button2048Style.qml  Playground.qml  ProgressBar2048Style.qml  Tile.qml  logic.js  main.qml  ui.js
